fixed some spacing issues

--- a/src/components/PageHome.css
+++ b/src/components/PageHome.css
@@ -69,9 +69,12 @@
   .PageHome-section--butts .PageHome-sectionInner {
     position: relative;
     background-color: #fff;
-    padding: 4em 5em 2em;
-    border-radius: 40px;
+    padding: 5em 1em 4em;
+    border-radius: 10px;
     border: 2px solid #000;
+    margin: 0 auto;
+    max-width: 1000px;
+    min-width: 680px;
   }
   .PageHome-section--butts .PageHome-sectionInner::after {
     content: "SO COOL!";
