--- a/src/components/SectionMint.css
+++ b/src/components/SectionMint.css
@@ -4,14 +4,15 @@
 .SectionMint {
   text-align: center;
 }
-.SectionMint-connect {
-  margin-top: 1em;
-}
 .SectionMint-headline {
   margin-bottom: 1em;
 }
 .SectionMint-section {
   margin-bottom: 3em;
+  margin-top: 3em;
+}
+.SectionMint-section:last-child {
+  margin-bottom: 0;
 }
 .SectionMint-sectionHeadline {
   display: block;
@@ -65,6 +66,12 @@
   box-shadow: 0;
   outline: 0;
   font-weight: 700;
+}
+.SectionMint-section--connect {
+  margin-top: 0;
+}
+.SectionMint-section--connect .SectionMint-headline {
+  margin-bottom: 2em;
 }
 .SectionMint-message {
   display: block;
